<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.AddNewTask"
    android:orientation="vertical">

    <EditText
        android:id="@+id/TaskName"
        android:hint="@string/hint_TaskName"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"/>
    <EditText
        android:id="@+id/TaskDescription"
        android:hint="@string/hint_TaskDescription"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/day"
            android:hint="@string/hint_Day"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="numberDecimal"/>
        <EditText
            android:id="@+id/month"
            android:hint="@string/hint_Month"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="numberDecimal"/>
        <EditText
            android:id="@+id/year"
            android:hint="@string/hint_Yar"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="numberDecimal"/>
        <EditText
            android:id="@+id/hour"
            android:hint="@string/hint_Hour"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="numberDecimal"/>
        <EditText
            android:id="@+id/minute"
            android:hint="@string/hint_Minute"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="numberDecimal"/>
    </LinearLayout>
    <Button
        android:id="@+id/AddTask"
        android:text="@string/button_AddTask"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>