<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activities.SettingsActivity">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/button_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10sp"
        android:src="@android:drawable/ic_media_rew"/>

    <TextView
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:layout_margin="10sp"
        tools:hint="login"/>

    <EditText
        android:id="@+id/field_oldPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:layout_margin="10sp"
        android:hint="@string/hint_OldPassword"
        android:inputType="textPassword"/>

    <EditText
        android:id="@+id/field_newPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:layout_margin="10sp"
        android:hint="@string/hint_NewPassword"
        android:inputType="textPassword"/>

    <EditText
        android:id="@+id/field_retreyPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:layout_margin="10sp"
        android:hint="@string/hint_RetreyPassword"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/button_changePassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:layout_margin="10sp"
        android:text="@string/button_ChangePassword"/>

    <Button
        android:id="@+id/button_LogOut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:layout_margin="10sp"
        android:text="@string/button_LogOut"/>

</LinearLayout>